# SAPIence

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  build.rs  buildVars.py  pyproject.toml  sconstruct
.cargo/: config.toml
.config/: nextest.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
addon/: installTasks.py  regsvrHelper.bat
addon/synthDrivers/: sapi5.py
docs/superpowers/plans/: 2026-05-26-sapience.md  2026-05-28-sapience-addon-complete-design.md
docs/superpowers/specs/: 2026-05-26-sapience-design.md  2026-05-27-sapience-addon-dll-bundling-design.md  2026-05-28-sapience-addon-complete-design.md
examples/: speak_via_sapi.rs
src/: class_factory.rs  clsid.rs  fragments.rs  lib.rs  marks.rs  nvda.rs  pacing.rs  registry.rs  ssml.rs  tts_engine.rs
tests/: instantiate.rs  nvda_pid_refusal.rs  register_unregister.rs
tests/common/: mod.rs
