[build-system]
requires = ["setuptools~=80.9", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SAPIence"
dynamic = ["version"]
description = "A SAPI 5 TTS engine that forwards speech to NVDA"
maintainers = [
	{name = "Leonard de Ruijter", email = "alderuijter@gmail.com"},
]
requires-python = ">=3.13,<3.14"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: End Users/Desktop",
	"License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python :: 3",
	"Topic :: Accessibility",
]
readme = "readme.md"
license = {file = "COPYING.TXT"}
dependencies = [
	# Build add-on
	"scons==4.10.1",
	"Markdown==3.10",
	# Translations management
	"requests==2.33.0",
	"nh3==0.3.2",
	"crowdin-api-client==1.24.1",
	"lxml==6.1.0",
	"mdx_truly_sane_lists==1.3",
	"markdown-link-attr-modifier==0.2.1",
	"mdx-gh-links==0.4",
	# Lint
	"uv==0.11.6",
	"ruff==0.14.5",
	"pre-commit==4.2.0"
]
[project.urls]
Repository = "https://github.com/leonardder/sAPIence"

[tool.ruff]
line-length = 110

builtins = [
	# translation lookup
	"_",
	# translation lookup
	"ngettext",
	# translation lookup
	"pgettext",
	# translation lookup
	"npgettext",
]

include = [
	"*.py",
	"sconstruct",
]

exclude = [
	".git",
	"__pycache__",
	".venv",
	"buildVars.py",
]

[tool.ruff.format]
indent-style = "tab"
line-ending = "lf"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint]
ignore = [
	# indentation contains tabs
	"W191",
]
logger-objects = ["logHandler.log"]

[tool.ruff.lint.per-file-ignores]
# sconscripts contains many inbuilt functions not recognised by the lint,
# so ignore F821.
"sconstruct" = ["F821"]
